terraform/ec2.tf
resource "aws_instance" "wordpress" {
  ami  = "ami-002d7d8815f3d2baa"
  instance_type = "t2.micro"
  subnet_id = aws_subnet.public.id
  security_groups = [aws_security_group.wordpress_sg.name]
  key_name = aws_key_pair.wp_key.key_name
  tags = {
    Name = "WordPressServer"
  }
}

resource "aws_key_pair" "wp_key" {
  key_name   = "wordpress-key"
  public_key = "ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQC0CgkEeR0Y9pd10Bj8EuCJgrLspN6WyaP0PYhMha9eHpCJuLuAm6bKU9KGKOLBMPCIbBubIYxALx6FVfPJB9AWNB3AW1QkzWMOwrw7SwDbzMabEBASG673Xt3a9j6gWfxt7xSX7Q/VvwsYRmgixcKzqoh6Mo5wYawWUhwEXYvXm8unAtlob4dmPVNjD3XRpUq8J8/irfYDN6HGTdcCTPsfksSAavuEUe0NREgwgB0xjbtTWuNvLaN5gbwo6a+lFLbzN/pBMj43xWANX/HisTwFztl/zEJXYy9HJi6maGCmRBnADUcr3B65O+bWgS8fHfDX8aDSj6Tnd9zArnDjL0uojxq7+u21hmPytg64I1g17Uktsk9Cs7wwA54NDkAfiQsVd12i1/duBwRa9hF9W65u/zTzSvHGrIOQfFh/MedTym1TuzHbzAClBCqKtAIL [...]
}
